--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import "tailwindcss";
+
+@plugin "tailwindcss-animate";
+
 body {
-  font-family:
-    -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: "IBM Plex Mono", "Courier New", Courier, monospace;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -9,4 +12,44 @@ body {
 code {
   font-family:
     source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
+}
+
+@theme {
+  --color-background: var(--background);
+  --color-text: var(--text);
+
+  @keyframes fadeInUp {
+    0% {
+      opacity: 0;
+      transform: translateY(10px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  --fadein-0: 0ms;
+  --fadein-100: 100ms;
+  --fadein-200: 200ms;
+  --fadein-300: 300ms;
+  --fadein-400: 400ms;
+  --fadein-500: 500ms;
+  --fadein-600: 600ms;
+  --fadein-700: 700ms;
+  --fadein-800: 800ms;
+  --fadein-900: 900ms;
+  --fadein-1000: 1000ms;
+}
+
+@utility fadein-* {
+  opacity: 0;
+  animation: fadeInUp 0.5s ease-out forwards;
+  animation-delay: --value(--fadein-*);
+}
+
+@layer base {
+  :root {
+    --background: #131313;
+    --text: #ca8c8c;
+  }
 }
